Comments progress - Disable validation on textarea so it doesn't show the tooltip - Fix submit button not being enabled when typing in textarea - Fix layout shift when typing in textarea - Disable textarea input when not logged in - Fix layout shift when opening reactions - Remove inherit from transition-property. It's not actually supported. The declaration was being dropped and it was defaulting back to all, which made it seem like it was working. I wonder if it would be ok to just let it default to all?

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -137,8 +137,8 @@ html * {
 	outline-color: var(--accent);
 	outline-offset: 3px;
 	outline-style: solid;
-	transition-duration: 200ms;
-	transition-property: inherit, outline-offset, outline-color;
+	transition-duration: 200ms !important;
+	transition-property: outline-offset, outline-color !important;
 }
 
 @supports not selector(:focus-visible) {
@@ -146,8 +146,8 @@ html * {
 		outline-color: var(--accent);
 		outline-offset: 3px;
 		outline-style: solid;
-		transition-duration: 200ms;
-		transition-property: inherit, outline-offset, outline-color;
+		transition-duration: 200ms !important;
+		transition-property: outline-offset, outline-color !important;
 	}
 }
 
@@ -197,7 +197,7 @@ button {
 	user-select: none;
 
 	transition-duration: 100ms;
-	transition-property: inherit, background-color, opacity;
+	transition-property: background-color, opacity;
 }
 
 button:disabled {
@@ -219,7 +219,7 @@ details {
 		padding: 4px 6px;
 		user-select: none;
 		transition-duration: 100ms;
-		transition-property: inherit, background-color;
+		transition-property: background-color;
 
 		&:hover {
 			background-color: var(--outline);
@@ -584,15 +584,13 @@ code, annotation {
 
 	&:focus-visible {
 		opacity: 100%;
-		transition-duration: 200ms;
-		transition-property: inherit, opacity;
+		transition-property: opacity, outline-offset, outline-color !important;
 	}
 
 	@supports not selector(:focus-visible) {
 		&:focus & {
 			opacity: 100%;
-			transition-duration: 200ms;
-			transition-property: inherit, opacity;
+			transition-property: opacity, outline-offset, outline-color !important;
 		}
 	}
 }
@@ -633,7 +631,7 @@ code, annotation {
 	margin: 0;
 	opacity: 100%;
 	transition-duration: 200ms;
-	transition-property: inherit, opacity;
+	transition-property: opacity;
 	transition-timing-function: ease-in;
 }
 
@@ -747,6 +745,7 @@ code, annotation {
 }
 
 .comment footer {
+	align-items: center;
 	display: grid;
 	grid-template-columns: auto 1fr;
 	margin: 16px;
@@ -756,10 +755,10 @@ code, annotation {
 	border-radius: 50%;
 	color: var(--text-detail);
 	font-size: 38px;
-	line-height: 24px;
+	line-height: 26px;
 	text-align: center;
-	height: 24px;
-	width: 24px;
+	height: 26px;
+	width: 26px;
 }
 
 .comment-toggle-reactions:hover {
@@ -783,7 +782,6 @@ code, annotation {
 	border-radius: 12px;
 	border-style: solid;
 	border-width: 1px;
-	font-family: sans-serif;
 	font-size: 13.5px;
 	height: 24px;
 	line-height: 24px;
@@ -794,7 +792,7 @@ code, annotation {
 	position: relative;
 	right: 0px;
 	transition-duration: 85ms;
-	transition-property: inherit, border-width, width, margin, right;
+	transition-property: border-width, width, margin, right;
 	transition-timing-function: ease-out;
 	white-space: pre;
 }
@@ -897,6 +895,7 @@ code, annotation {
 	padding: 16px;
 	padding-bottom: 14px;
 	resize: none;
+	transition-property: none;
 	width: 100%;
 }
 
